# ANOTA_MAC_DAST

./: .gitignore  README.md  blm_visualize.py
ANOTA-interpreter/: README.md  anota_syscall_integration_test.py  anota_syscall_signal_test.py  anota_taint_test.py  test_nested_sink.py  test_syscall_socket_env.py  test_taint_address_reuse.py  test_taint_propagation_comprehensive.py  test_taint_syscall_integration.py  test_unhashable_taint.py  test_watch_address_reuse.py
ANOTA-interpreter/Include/: anota_taint.h  anota_watch.h
ANOTA-interpreter/Misc/: python-config.sh  python-embed.pc  python.pc
ANOTA-interpreter/Modules/: ld_so_aix
ANOTA-interpreter/Objects/: object.c
ANOTA-interpreter/Python/: anota_syscall.c  anota_taint.c  anota_watch.c  bltinmodule.c  ceval.c
ANOTA-interpreter/syscall-module/: Cargo.toml  README.md
ANOTA-interpreter/syscall-module/syscall-tracepoint/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-common/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-common/src/: lib.rs
ANOTA-interpreter/syscall-module/syscall-tracepoint-ebpf/: Cargo.toml
ANOTA-interpreter/syscall-module/syscall-tracepoint-ebpf/src/: file.rs  main.rs  process.rs
ANOTA-interpreter/syscall-module/syscall-tracepoint/src/: file.rs  main.rs
Supplementary Materials/: cwe_top_40.md  perf-benchmark.md
Supplementary Materials/cmp-with-DBI/: readme.md
SupplementaryMaterials/: annotation_study_details.md  skipped_applications.md
SupplementaryMaterials/cmp-with-DBI/: dynamorio_trace_memory.c  valgrind_trace_memory.c
agents/prompts/: logic_attack.txt  promote_finding.txt  repro_attack.txt  validate_attack.txt
interface/: README.md  aggregator.py
interface/blm/: db.py  exporter.py  generator.py  state_mapper.py
interface/cpp_ebpf/: harness.py
interface/memory/: codebase.py  controller.py  projector.py  sync_hints.py
interface/php_xdebug/: coverage_parser.py  instrument.php  routing.py  runner.py  state_observer.py
logic_engine/: README.md  agent_config.py  orchestrator.py  scanner.py
logic_engine/agents/: attack_gen.py  concurrent_attacker.py  cpp_profiler.py  discovery.py  executor.py  knowledge.py  mutator.py  php_profiler.py  repro_gen.py  setup.py  validator.py
tests/fixtures/: session_logic.php  simple.php  simple_target  simple_target.cpp  uprobe_test  uprobe_test.c
tests/interface/: test_aggregator.py  test_blm_generator.py  test_codebase_memory.py  (+8 more)
(+21 files in other folders)
