[workspace]
members = ["xtask", "syscall-tracepoint", "syscall-tracepoint-common", "syscall-tracepoint-ebpf"]
resolver = "2"

#[patch."https://github.com/aya-rs/aya"]
#aya = { path = "aya-src/aya" }
#aya-log = { path = "aya-src/aya-log" }
#aya-ebpf = { path = "aya-src/ebpf/aya-ebpf" }
#aya-log-ebpf = { path = "aya-src/ebpf/aya-log-ebpf" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
