[package]
name = "syscall-tracepoint-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { version = "0.1", package = "aya-ebpf" }
aya-log-ebpf = { version = "0.1", package = "aya-log-ebpf" }
syscall-tracepoint-common = { path = "../syscall-tracepoint-common" }

[[bin]]
name = "syscall-tracepoint-ebpf"
path = "src/main.rs"




