[package]
name = "syscall-tracepoint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = { version = "0.2" }
syscall-tracepoint-common = { path = "../syscall-tracepoint-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
bytemuck = "1"

[[bin]]
name = "syscall-tracepoint"
path = "src/main.rs"
